Fix alignment of close button for RTL languages.

--- a/wiki/src/local.rtl.css
+++ b/wiki/src/local.rtl.css
@@ -78,3 +78,8 @@ html[dir="rtl"] #news, html[dir="rtl"] #bugs {
 html[dir="rtl"] div.contribute-roles-1 {
     margin: 0;
 }
+
+html[dir="rtl"] #pagebody div.toggleable span.hide a.toggle {
+    right: auto;
+    left: 0;
+}
